# dns-sd

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
.husky/: commit-msg  pre-commit
crates/dns-sd/: Cargo.toml
crates/dns-sd/src/: fallback.rs  ffi.rs  lib.rs  native.rs
src/: index.cts  index.mts  load.cts
