[package]
name = "dns-sd"
version = "0.1.0"
description = "Cross platform DNS-SD"
authors = ["Hans"]
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "1.1", default-features = false, features = ["napi-6"] }
mdns-sd = "0.17"       # Fallback backend
once_cell = "1"
libloading = "0.8"     # Dynamic library loading
libc = "0.2"           # C types for FFI
hostname = "0.4"       # Get system hostname
